--- a/docs/themes/public/partials/sidebar.handlebars
+++ b/docs/themes/public/partials/sidebar.handlebars
@@ -1,5 +1,5 @@
 <div id="sidebar">
-  <a class="tocTitle" href="#">Aeris.js ({{project.version}})</a>
+  <a class="tocTitle" href="#">Aeris.js ({{projectConfig.version}})</a>
   <ul class="tocSection">
     <li><a href="{{projectConfig.githubUrl}}"  target="_blank">Github Repo</a></li>
     <li><a href="{{projectConfig.aerisApiUrl}}"  target="_blank">Aeris Weather API</a></li>
