--- a/docs/themes/markdown/views/usage.md.handlebars
+++ b/docs/themes/markdown/views/usage.md.handlebars
@@ -1,7 +1,7 @@
 Basic Usage
 ===========
 
-This document is only an introduction to the features of Aeris Interactive. Check out the reference API for more complete documentation.
+This document is only an introduction to the features of Aeris.js. Check out the reference API for more complete documentation.
 
 
 - [Overview of Features](#overview-of-features)
@@ -11,13 +11,13 @@ This document is only an introduction to the features of Aeris Interactive. Chec
     - [AppBuilder](#appbuilder)
 
 #### A Note For RequireJS Users
-The examples in this document reference components within the global `aeris` namespace. This is appropriate when loading the library from a CDN. If you are loading components as RequireJS/AMD modules, you can find *most* items in a module path matchig up to the global namespace.
+The examples in this document reference components within the global `aeris` namespace. This is appropriate when loading the library from a CDN. If you are loading components as RequireJS/AMD modules, you can find find modules by matching namespace paths to the aeris library file structure.
 
-For example, `aeris.maps.layers.Radar` can be found at `ai/maps/layers/radar`.
+For example, {{publicDocLink 'aeris.maps.layers.Radar'}} can be found at [`ai/maps/layers/radar`](https://github.com/hamweather/aerisjs/blob/master/lib/aeris/maps/layers/aerisradar.js).
 
 ## Data and Weather API
 
-The Aeris Interactive api library provides a javascript interface for interacting with data from the [Aeris API](http://www.hamweather.com/support/documentation/aeris/endpoints/). Data collection objects accept a `params` object, which is used to query the AerisAPI.
+The Aeris.js `api` library provides a javascript interface for interacting with data from the [Aeris API](http://www.hamweather.com/support/documentation/aeris/endpoints/). Data collection objects accept a {{apiDocLink 'aeris.api.params.models.Params' 'params'}} object, which is used to query the AerisAPI.
 
 ```javascript
 var stormReportCollection = new aeris.api.collections.StormReports(null, {
@@ -36,7 +36,7 @@ var stormReportCollection = new aeris.api.collections.StormReports(null, {
 You may also specify the action to use for requesting data (generally, defaults to `within`)
 
 ```javascript
-var stormReportCollection = new aeris.api.collections.StormReports(null, {
+var stormReports = new aeris.api.collections.StormReports(null, {
     action: 'closest',
     params: {
         p: '55415'
@@ -44,19 +44,19 @@ var stormReportCollection = new aeris.api.collections.StormReports(null, {
 });
 ```
 
-Data collections are populated via ajax request, using the `fetch` method, which returns an `aeris.Promise` object.
+Data collections are populated via ajax requests, using the `fetch` method, which returns an {{publicDocLink 'aeris.Promise' }} object.
 
 ```javascript
-    stormReportCollection.fetch().
-        done(function() {
-            // stormReportCollection is populated with data
+    stormReports.fetch().
+        done(function(response) {
+            // stormReports is populated with data
         }).
         fail(function(err) {
             // Failed to load data from the API.
         });
 
     // Or, listen to events on the collection
-    stormReportCollection.on({
+    stormReports.on({
         sync: function() {
             // data has been fetched from the API
         },
@@ -66,7 +66,7 @@ Data collections are populated via ajax request, using the `fetch` method, which
     });
 ```
 
-Data collections extend from [`Backbone.Collection`](http://backbonejs.org/#Collection):
+Data collections extend from [`Backbone.Collection`](http://backbonejs.org/#Collection), and thus provide all the same methods as a `Backbone.Collection`.
 
 ```javascript
 stormReportCollection.each(function(stormReport) {
@@ -91,9 +91,9 @@ Data collections are defined for the following [AerisAPI endpoints](http://www.h
 
 | Endpoint | Model | Collection |
 | ----------------- |-------| -----------|
-| /earthquakes | `aeris.api.models.Earthquake` | `aeris.api.collections.Earthquakes`|
-| /fires | `aeris.api.models.Fire` | `aeris.api.collections.Fires` |
-| /stormreports | `aeris.api.models.StormReport` | `aeris.api.collections.StormReports` |
+| `/earthquakes` | {{publicDocLink 'aeris.api.models.Earthquake' }} | {{publicDocLink 'aeris.api.collections.Earthquakes' }}|
+| `/fires` | {{publicDocLink 'aeris.api.models.Fire' }} | {{publicDocLink 'aeris.api.collections.Fires' }} |
+| `/stormreports` | {{publicDocLink 'aeris.api.models.StormReport' }} | {{publicDocLink 'aeris.api.collections.StormReports' }} |
 
 
 
@@ -102,7 +102,7 @@ Data collections are defined for the following [AerisAPI endpoints](http://www.h
 
 #### Basic Map Objects
 
-Map objects are rendered and erased using the `setMap` method.
+{{publicDocLink 'aeris.maps.Map' 'Map' }} objects are rendered and erased using the `setMap` method.
 
 ```javascript
 var map = new aeris.maps.Map('map-canvas');
@@ -185,44 +185,35 @@ marker.on({
 
 #### Rendering Map Objects From Weather API Data
 
-Data collections can be bound to collection of markers, allowing you to render point data as markers on a map.
+{{publicDocLink 'aeris.maps.markercollections' 'MarkerCollections' }} can be used to render Aeris API data.
 
 ```javascript
-var earthquakeCollection = new aeris.api.collections.Earthquakes({
-    params: {
-        filters: ['moderate', 'strong', 'major'],
-        p: map.getBounds();             // only look for earthquakes within the map bounds.
-    }
-});
-var earthquakeMarkers = new aeris.maps.markercollections.EarthquakeMarkers(null, {
-    data: earthquakeCollection          // Bind to earthquakeCollection data
-});
+var earthquakeMarkers = new aeris.maps.markercollections.EarthquakeMarkers();
 
 earthquakeMarkers.setMap(map);
 
 // Fetch earthquake data from Aeris API
 // Markers will be set to the map for every data model fetched.
-earthquakeCollection.fetch();
+earthquakeMarkers.fetchData();
 
 
 // Look for new earthquakes when the
 // map changes location
 map.on('change:bounds', function() {
-    // Reset the bounds on the earthquake collection
-    earthquakeCollection.setParams({
+    // Update the query parameters for the Aeris API request,
+    // limited the search to the bounds of the map viewport
+    earthquakeMarkers.setParams({
         p: map.getBounds()
     });
-    earthquakeCollection.fetch();
+    earthquakeMarkers.fetchData();
 });
 
 
 // Render earthquake data on click
 earthquakeMarkers.on('click', function(latLon, marker) {
-    var earthquake = marker.getData();
-    
     var infoBox = new aeris.maps.InfoBox({
         position: latLon,
-        content: myTemplate(earthquake.toJSON());
+        content: myTemplate(marker.getData().toJSON());
     });
     infoBox.setMap(map);
 });
@@ -231,7 +222,7 @@ earthquakeMarkers.on('click', function(latLon, marker) {
 
 ## Geoservices
 
-Aeris Interactive provides wrappers around a number of 3rd party APIs and services. This allows you to easily switch out one service for another, using the same interface.
+Aeris.js provides wrappers around a number of 3rd party APIs and services. This allows you to easily switch out one service for another, using the same interface.
 
 ```javascript
 var geolocator;
@@ -253,16 +244,28 @@ $('#findMe').click(function() {
 });
 ```
 
-See reference documentation for service documentation.
+See the reference documentation for more details about geoservices:
+
+* {{publicDocLink 'aeris.geolocate' 'Geolocation services'}}
+* {{publicDocLink 'aeris.geocode' 'Geocode services' }}
 
 
 ## AppBuilder
 
-The Aeris AppBuilder is a dead-simple tool for creating a weather map application.
+```javascript
+/**
+ * The Aeris.js AppBuilder is still very much a work in progress.
+ * Feel free to play around with it while we finish up this feature.
+*/
+```
+
+The Aeris {{apiDocLink 'aeris.builder.maps.MapAppBuilder' 'AppBuilder' }} is a dead-simple tool for creating a weather map application.
 
 ```javascript
 new MapApp({
-    el: 'myMapApp'      // ID of application container element
+    el: 'myMapApp',      // ID of application container element
+    apiKey: 'MY_AERIS_CLIENT_ID',
+    apiSecret: 'MY_AERIS_CLIENT_SECRET',
     layers: [
         'Radar',
         'Satellite'
@@ -277,8 +280,6 @@ new MapApp({
 
 #### Theming the AppBuilder
 
-To get started, you can use the Aeris Interactive default theme, located at [TBD].
-
 If you'd like to customize the theme, you can bootstrap off of the default theme, which is written using [Sass](http://sass-lang.com/), a CSS precompiler. You can find the default theme in the repo, located at `lib/aeris/builder/maps/theme`.
 
 We use [Compass](http://compass-style.org/) to compile the the sass stylesheets, which is as easy as running:
@@ -288,5 +289,3 @@ compass compile
 ```
 
 from the theme directory.
-
-> Written with [StackEdit](https://stackedit.io/).
