install.md: fix cdn paths

--- a/docs/themes/markdown/views/install.md.handlebars
+++ b/docs/themes/markdown/views/install.md.handlebars
@@ -26,7 +26,7 @@ There are several hosted versions of the Aeris.js library, each with a varying s
 
     Render weather tile layers and data using [Google Maps](https://developers.google.com/maps/).
 
-    https://{{getCDNPath 'gmaps'}}
+    https:{{getCDNPath 'gmaps'}}
 
 * **Weather for OpenLayers**
 
@@ -34,19 +34,19 @@ There are several hosted versions of the Aeris.js library, each with a varying s
 
     *Note that not all mapping features are currently implemented for OpenLayers.*
 
-    https://{{getCDNPath 'openlayers' }}
+    https:{{getCDNPath 'openlayers' }}
 
 * **Weather API only**
 
     A javascript interface for the [Aeris Weather API](http://www.hamweather.com/support/documentation/aeris/).
 
-    https://{{getCDNPath 'api'}}
+    https:{{getCDNPath 'api'}}
 
 * **Weather for Google Maps + Geo Services**
 
     Includes additional APIs for {{publicDocLink 'aeris.geolocate' 'geolocation'}}, {{publicDocLink 'aeris.geocode' 'geocoding'}}, and {{apiDocLink 'aeris.directions.DirectionsServiceInterface' 'directions'}}.
 
-    https://{{getCDNPath 'gmaps-plus'}}
+    https:{{getCDNPath 'gmaps-plus'}}
 
 * **Map AppBuilder**
 
@@ -54,7 +54,7 @@ There are several hosted versions of the Aeris.js library, each with a varying s
 
     *The {{apiDocLink 'aeris.builder.maps.MapAppBuilder' 'AppBuilder'}} component is currently a work in progress. Feel free to play around with it, while we finish up work on this component.*
 
-    https://{{getCDNPath 'mapAppBuilder'}}
+    https:{{getCDNPath 'mapAppBuilder'}}
     
 
 
