Change references from "Aeris Interactive" to 'Aeris.js'

--- a/docs/themes/public/partials/intro.handlebars
+++ b/docs/themes/public/partials/intro.handlebars
@@ -9,7 +9,7 @@
 
   <p>
 
-    Out of the box, Aeris Interactive provides a suite of tools for rendering <strong>weather maps and widgets,</strong> and using <strong>data from
+    Out of the box, Aeris.js provides a suite of tools for rendering <strong>weather maps and widgets,</strong> and using <strong>data from
     the Aeris API</strong>. Maps can be rendered using the <a href="https://developers.google.com/maps/" target="_blank">Google
     Maps API</a> or <a href="http://openlayers.org/" target="_blank">OpenLayers</a>.
   </p>
@@ -22,9 +22,9 @@
   <pre>
     <code class="example">
 /**
- * Aeris interactive is currently in <strong>beta release</strong>.
+ * Aeris.js is currently in <strong>beta release</strong>.
  * While we will make our best efforts to maintain a stable API,
- * minor changes may be made to the interface while Aeris Interactive
+ * minor changes may be made to the interface while Aeris.js
  * is still in beta.
  *
  *
@@ -39,7 +39,7 @@
 
   <h2 id="Downloads" style="padding-top:0">Downloads</h2>
 
-  <p>There are several hosted versions of the Aeris Interactive library, each with a varying set of features.</p>
+  <p>There are several hosted versions of the Aeris.js library, each with a varying set of features.</p>
 
   <table class="downloads">
     <tr>
@@ -94,7 +94,7 @@
 
   <p>
     Aeris.js uses <a target="_blank" href="http://requirejs.org/">RequireJS</a> to load modules and components. Using RequireJS (or a compatible
-    <a target="_blank" href="http://en.wikipedia.org/wiki/Asynchronous_module_definition">AMD Loader</a> you can pick and choose which Aeris Interactive components you would like to use.
+    <a target="_blank" href="http://en.wikipedia.org/wiki/Asynchronous_module_definition">AMD Loader</a> you can pick and choose which Aeris.js components you would like to use.
   </p>
 
   <p>
