Remove CDN path for openlayers build from install.md

--- a/docs/themes/markdown/views/install.md.handlebars
+++ b/docs/themes/markdown/views/install.md.handlebars
@@ -34,7 +34,7 @@ There are several hosted versions of the Aeris.js library, each with a varying s
 
     *Note that not all mapping features are currently implemented for OpenLayers.*
 
-    https:{{getCDNPath 'openlayers' }}
+    **Coming soon!**
 
 * **Weather API only**
 
