MapApp: Fullscreen Module

--- a/src/builder/maps/mapcontrols/views/controls.html.hbs
+++ b/src/builder/maps/mapcontrols/views/controls.html.hbs
@@ -21,6 +21,7 @@
 
 <footer>
   <ul>
+    <li class="fullscreenControlsRegion"></li>
     <li class="tipsControls">
       <a href="#">
         <span class="icon-info"></span>
