MapApp: Prefix CSS class with 'aeris-'
- to prevent style conflicts with client application

--- a/src/builder/routes/mapcontrols/views/controls.html.hbs
+++ b/src/builder/routes/mapcontrols/views/controls.html.hbs
@@ -1,29 +1,29 @@
-<section class="geosearch">
-  <span class="geolocateControls"></span>
-  <span class="geocodeRegion"></span>
+<section class="aeris-geosearch">
+  <span class="aeris-geolocateControls"></span>
+  <span class="aeris-geocodeRegion"></span>
 </section>
 
-<div class="scrollable">
-  <section class="mapControls state-closed">
+<div class="aeris-scrollable">
+  <section class="aeris-mapControls aeris-state-closed">
     <h1>
-      <span class="icon-controls"></span>
+      <span class="aeris-icon-controls"></span>
       Map Options
-      <a class="toggleCollapseBtn" onclick="return false;" href="#"></a>
+      <a class="aeris-toggleCollapseBtn" onclick="return false;" href="#"></a>
     </h1>
 
-    <section class="menu layerControls"></section>
+    <section class="aeris-menu aeris-layerControls"></section>
 
-    <section class="menu markerControls"></section>
+    <section class="aeris-menu aeris-markerControls"></section>
   </section>
 
-  <div class="routeBuilderControls"></div>
+  <div class="aeris-routeBuilderControls"></div>
 </div>
 
 <footer>
   <ul>
-    <li class="tipsControls">
+    <li class="aeris-tipsControls">
       <a href="#">
-        <span class="icon-info"></span>
+        <span class="aeris-icon-info"></span>
         <span>Tips</span>
       </a>
     </li>
