--- a/src/builder/routes/routebuilder/routepointinfo/views/routepointinfopanel.html.hbs
+++ b/src/builder/routes/routebuilder/routepointinfo/views/routepointinfopanel.html.hbs
@@ -1,4 +1,4 @@
-<div class="infoPanel routePoint">
+<div class="aeris-infoPanel aeris-routePoint">
   <h1>Route Point</h1>
 
   <header>
@@ -32,6 +32,6 @@
   </section>
 
   <section>
-    <a class="secondaryBtn deleteBtn" href="#">Delete this point</a>
+    <a class="aeris-secondaryBtn aeris-deleteBtn" href="#">Delete this point</a>
   </section>
 </div>
