--- a/src/builder/routes/routebuilder/views/controls.html.hbs
+++ b/src/builder/routes/routebuilder/views/controls.html.hbs
@@ -1,28 +1,28 @@
 <h1>Route Planner</h1>
 
-<ul class="buttonMenu">
+<ul class="aeris-buttonMenu">
   <li class="aeris-btn-save">
     <a href="#">
-      <span class="icon-save"></span>
-      <span class="btnLabel">Save</span>
+      <span class="aeris-icon-save"></span>
+      <span class="aeris-btnLabel">Save</span>
     </a>
   </li>
   <li class="aeris-btn-undo">
     <a href="#">
-      <span class="icon-undo"></span>
-      <span class="btnLabel">Undo</span>
+      <span class="aeris-icon-undo"></span>
+      <span class="aeris-btnLabel">Undo</span>
     </a>
   </li>
   <li class="aeris-btn-clear">
     <a href="#">
-      <span class="icon-delete"></span>
-      <span class="btnLabel">Clear</span>
+      <span class="aeris-icon-delete"></span>
+      <span class="aeris-btnLabel">Clear</span>
     </a>
   </li>
   <li class="aeris-btn-returnRoute">
     <a href="#">
-      <span class="icon-return"></span>
-      <span class="btnLabel">Return</span>
+      <span class="aeris-icon-return"></span>
+      <span class="aeris-btnLabel">Return</span>
     </a>
   </li>
 </ul>
