--- a/src/builder/routes/routebuilder/views/saverouteform.html.hbs
+++ b/src/builder/routes/routebuilder/views/saverouteform.html.hbs
@@ -31,8 +31,8 @@
 
     <section class="aeris-buttons">
       <div class="aeris-loading">Loading...</div>
-      <a href="#" class="secondaryBtn aeris-close">Cancel</a>
-      <a href="#" class="actionBtn aeris-save">Save</a>
+      <a href="#" class="aeris-secondaryBtn aeris-close">Cancel</a>
+      <a href="#" class="aeris-actionBtn aeris-save">Save</a>
     </section>
   </div>
 </div>
