--- a/src/builder/maps/mapapp/views/app.html
+++ b/src/builder/maps/mapapp/views/app.html
@@ -1,8 +1,8 @@
 <div class="aeris-map-app">
-  <div class="mapControlsRegion"></div>
+  <div class="aeris-mapControlsRegion"></div>
   <div class="aeris-mapContainer">
-    <div class="mapCanvasRegion"></div>
+    <div class="aeris-mapCanvasRegion"></div>
     <div class="aeris-modalViewRegion"></div>
   </div>
-  <div class="infoPanelRegion"></div>
+  <div class="aeris-infoPanelRegion"></div>
 </div>
