--- a/src/builder/maps/markers/views/markerdetails.html.hbs
+++ b/src/builder/maps/markers/views/markerdetails.html.hbs
@@ -1,4 +1,4 @@
-<h1 class="float-left" style="display: inline-block; float: left">Marker Details</h1>
+<h1 class="aeris-float-left" style="display: inline-block; float: left">Marker Details</h1>
 <button class="aeris-closeBtn" style="display: inline-block; float: right">close</button>
 <div style="clear: both"></div>
 <table>
