--- a/docs/themes/api/partials/sidebar.handlebars
+++ b/docs/themes/api/partials/sidebar.handlebars
@@ -13,9 +13,17 @@
     <div id="api-tabview-panel">
       <ul id="api-classes" class="apis classes">
         {{#eachNamespace classes}}
-          {{#ifEquals name 'aeris'}}
-            {{>namespacetree this}}
-          {{/ifEquals}}
+
+          {{!--
+            Only render namespace tree for projects
+            specified in "lib" yuidoc.json config
+          --}}
+          {{#each ../projectLibs }}
+            {{#ifEquals ../name this}}
+              {{>namespacetree ../../this}}
+            {{/ifEquals}}
+          {{/each  }}
+
         {{/eachNamespace}}
       </ul>
     </div>
