minor change to docs

--- a/docs/themes/public/partials/intro.handlebars
+++ b/docs/themes/public/partials/intro.handlebars
@@ -144,6 +144,10 @@ earthquakeMarkers.fetchData();
     </pre>
   </code>
 
+  <p>
+    See our <a href="{{githubUrl}}/docs/usage.md">Github page</a> for for more usage examples.
+  </p>
+
 
   <h2 id="Get-An-API-Key">Get an API Key</h2>
 
