--- a/docs/themes/api/partials/attrs.handlebars
+++ b/docs/themes/api/partials/attrs.handlebars
@@ -1,7 +1,11 @@
 <div id="attr_{{name}}" class="attr item{{#if access}} {{access}}{{/if}}{{#if deprecated}} deprecated{{/if}}{{#if extended_from}} inherited{{/if}}">
     <a name="config_{{name}}"></a> {{! For backwards compatibility }}
     <h3 class="name"><code>{{name}}</code></h3>
-    <span class="type">{{#crossLink type}}{{/crossLink}}</span>
+    <span class="type">
+      {{#if type}}
+        {{>eachtypeintext type}}
+      {{/if}}
+    </span>
 
     {{#if deprecated}}
         <span class="flag deprecated"{{#if deprecationMessage}} title="{{deprecationMessage}}"{{/if}}>deprecated</span>
