YUIDoc type defs for LatLng, Bounds, Path

--- a/docs/themes/api/partials/classes.handlebars
+++ b/docs/themes/api/partials/classes.handlebars
@@ -54,7 +54,7 @@
 
 <h3>Summary</h3>
 <div class="intro">
-    {{{classDescription}}}
+    {{>eachtypeintext classDescription}}
 </div>
 
 {{#is_constructor}}
