Update CDN path

--- a/docs/themes/public/partials/intro.handlebars
+++ b/docs/themes/public/partials/intro.handlebars
@@ -43,11 +43,11 @@
 
   <table class="downloads">
     <tr>
-      <td><a class="btn" href="//js.aerisapi.com/aerisjs/{{version}}/gmaps.min.js">Weather for Google Maps</a></td>
+      <td><a class="btn" href="//cdn.aerisjs.com/{{version}}/gmaps.min.js">Weather for Google Maps</a></td>
       <td>Render weather tile layers and data using Google Maps. ~37k gzipped.</td>
     </tr>
     <tr>
-      <td><a class="btn" href="//js.aerisapi.com/aerisjs/{{version}}/gmaps-plus.min.js">Weather for Google Maps +</a></td>
+      <td><a class="btn" href="//cdn.aerisjs.com/{{version}}/gmaps-plus.min.js">Weather for Google Maps +</a></td>
       <td>Includes additional APIs for geolocation, geocoding, and directions. ~39k gzipped.</td>
     </tr>
     <tr>
@@ -55,7 +55,7 @@
       <td>Render weather tile layers and data using OpenLayers. (Coming soon!)</td>
     </tr>
     <tr>
-      <td><a class="btn" href="//js.aerisapi.com/aerisjs/{{version}}/api.min.js">Weather API only</a></td>
+      <td><a class="btn" href="//cdn.aerisjs.com/{{version}}/api.min.js">Weather API only</a></td>
       <td>A javascript interface for the <a target="_blank" href="http://www.hamweather.com/support/documentation/aeris/">Aeris Weather API</a>.</td>
     </tr>
   </table>
@@ -69,22 +69,22 @@
     <code class="example">
 &lt;!-- Weather for Google Maps --&gt;
 &lt;script type="text/javascript"
-        src="//js.aerisapi.com/aerisjs/{{version}}/gmaps.min.js"&gt;
+        src="//cdn.aerisjs.com/{{version}}/gmaps.min.js"&gt;
 &lt;/script&gt;
 
 &lt;!-- Weather for Google Maps + --&gt;
 &lt;script type="text/javascript"
-        src="//js.aerisapi.com/aerisjs/{{version}}/gmaps-plus.min.js"&gt;
+        src="//cdn.aerisjs.com/{{version}}/gmaps-plus.min.js"&gt;
 &lt;/script&gt;
 
 &lt;!-- Weather API Only --&gt;
 &lt;script type="text/javascript"
-        src="//js.aerisapi.com/aerisjs/{{version}}/api.min.js"&gt;
+        src="//cdn.aerisjs.com/{{version}}/api.min.js"&gt;
 &lt;/script&gt;
 
 &lt;!-- Most recent Google Maps + build--&gt;
 &lt;script type="text/javascript"
-        src="//js.aerisapi.com/aeris.js"&gt;
+        src="//cdn.aerisjs.com/aeris.js"&gt;
 &lt;/script&gt;
     </code>
   </pre>
