--- a/docs/themes/markdown/views/install.md.handlebars
+++ b/docs/themes/markdown/views/install.md.handlebars
@@ -27,7 +27,7 @@ There are several hosted versions of the Aeris.js library, each with a varying s
 
     Render weather tile layers and data using [Google Maps](https://developers.google.com/maps/).
 
-    https:{{getCDNPath 'gmaps'}}
+    [{{getCDNPath 'gmaps'}}]({{getCDNPath 'api'}})
 
 * **Weather for OpenLayers**
 
@@ -39,15 +39,15 @@ There are several hosted versions of the Aeris.js library, each with a varying s
 
 * **Weather API only**
 
-    A javascript interface for the [Aeris Weather API](http://www.hamweather.com/support/documentation/aeris/).
+    A javascript interface for the [Aeris Weather API]({{project.aerisApiUrl}}).
 
-    https:{{getCDNPath 'api'}}
+    [{{getCDNPath 'api'}}]({{getCDNPath 'api'}})
 
 * **Weather for Google Maps + Geo Services**
 
     Includes additional APIs for {{publicDocLink 'aeris.geolocate' 'geolocation'}}, {{publicDocLink 'aeris.geocode' 'geocoding'}}, and {{apiDocLink 'aeris.directions.DirectionsServiceInterface' 'directions'}}.
 
-    https:{{getCDNPath 'gmaps-plus'}}
+    [{{getCDNPath 'gmaps-plus'}}]({{getCDNPath 'gmaps-plus'}})
 
 * **Map AppBuilder**
 
@@ -55,7 +55,7 @@ There are several hosted versions of the Aeris.js library, each with a varying s
 
     *The {{apiDocLink 'aeris.builder.maps.MapAppBuilder' 'AppBuilder'}} component is currently a work in progress. Feel free to play around with it, while we finish up work on this component.*
 
-    https:{{getCDNPath 'mapAppBuilder'}}
+    [{{getCDNPath 'mapAppBuilder'}}]({{getCDNPath 'mapAppBuilder'}})
     
 
 
@@ -66,15 +66,6 @@ In order to use weather data from the Aeris API, you must provide an Aeris API c
 ```javascript
 aeris.config.setApiKey('abcd1234');
 aeris.config.setApiSecret('wxyz6789');
-```
-
-
-### Using https
-
-The Aeris.js library is available from a secure server using the `js-secure` subdomain. For example:
-
-```javascript
-<script type="text/javascript" src="//js-secure.aerisapi.com/aerisjs/{{project.version}}/aeris.min.js"></script>
 ```
 
 
