Grunt jasmine: strategy option
- to configure which maps strategy to use
  when running tests for a target

--- a/tasks/jasmine-amd/templates/specrunner.html.tmpl
+++ b/tasks/jasmine-amd/templates/specrunner.html.tmpl
@@ -26,6 +26,11 @@
     };
   <% } %>
 
+  require.config({
+    paths: {
+      'aeris/maps/strategy': 'src/maps/<%=strategy%>'
+    }
+  });
   require([
     '<%=amdConfig.join('\',\n    \'') %>'
   ], function() {
