Fix public docs HTML title

--- a/docs/themes/public/layouts/main.handlebars
+++ b/docs/themes/public/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Styleguide for AerisJS Public API Docs</title>
+  <title>Aeris.js Documentation</title>
 
   <link rel="stylesheet" href="{{projectConfig.assetPath}}/css/public.css"/>
   <link rel="shortcut icon" type="image/png" href="{{projectConfig.assetPath}}/images/aeris-favicon.png"/>
