Move *.md docs to docs/
from markdown/docs

- make it easier for people to find them
  by browsing through github repo

--- a/docs/themes/public/partials/intro.handlebars
+++ b/docs/themes/public/partials/intro.handlebars
@@ -98,7 +98,7 @@
   </p>
 
   <p>
-    See the <a href="{{githubUrl}}/docs/markdown/install.md">Aeris.js installation guide on Github</a> for more information on using Aeris.js AMD modules.
+    See the <a href="{{githubUrl}}/docs/install.md">Aeris.js installation guide on Github</a> for more information on using Aeris.js AMD modules.
   </p>
 
 
