Docs: fix whitespace in public docs class descriptions

--- a/docs/themes/public/partials/class.handlebars
+++ b/docs/themes/public/partials/class.handlebars
@@ -18,7 +18,11 @@
 </ul>
 
 {{#if description }}
-  {{>eachtypeintext description}}
+  <p>
+    <pre>
+      {{~>eachtypeintext description~}}
+    </pre>
+  </p>
 {{/if}}
 
 
