--- a/examples/css/example.css
+++ b/examples/css/example.css
@@ -166,6 +166,10 @@ html, body {
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
+.aeris-cluster.aeris-leaflet:after {
+  left: 16px;
+}
+
 .aeris-cluster div {
   z-index: 2;
 }
