Remove templated version from *.md docs
- so we do not have to generate and commit new *.md docs
  for every release.

--- a/docs/themes/markdown/views/install.md.handlebars
+++ b/docs/themes/markdown/views/install.md.handlebars
@@ -277,5 +277,5 @@ require.config({
 Of course, you can always just go ahead and download the whole repo and stick it in your application directory. This means you'll have to download and manage all your dependencies yourself, but hey, to each their own.
 
 * [`master` branch](https://github.com/hamweather/aerisjs/archive/master.zip)
-* [v{{project.version}} release](https://github.com/hamweather/aerisjs/releases/tag/v{{project.version}})
+* [Version releases](https://github.com/hamweather/aerisjs/releases)
 * Clone the repo: `git clone https://github.com/hamweather/aerisjs.git`
