Install docs: describe base aeris.js package
- also, fix gmaps CDN path

--- a/docs/themes/markdown/views/install.md.handlebars
+++ b/docs/themes/markdown/views/install.md.handlebars
@@ -23,11 +23,17 @@ For basic usage, Aeris.js can be used from a CDN:
 
 There are several hosted versions of the Aeris.js library, each with a varying set of features.
 
+* **Aeris.js**
+
+    The default library includes all of the Aeris.js features, excluding the Map AppBuilder. Google Maps is used as the default mapping library.
+
+    [{{getCDNPath 'aeris'}}]({{getCDNPath 'aeris'}})
+
 * **Weather for Google Maps**
 
     Render weather tile layers and data using [Google Maps](https://developers.google.com/maps/).
 
-    [{{getCDNPath 'gmaps'}}]({{getCDNPath 'api'}})
+    [{{getCDNPath 'gmaps'}}]({{getCDNPath 'gmaps'}})
 
 * **Weather for OpenLayers**
 
