--- a/docs/themes/markdown/views/usage.md.handlebars
+++ b/docs/themes/markdown/views/usage.md.handlebars
@@ -4,11 +4,13 @@ Basic Usage
 This document is only an introduction to the features of Aeris.js. Check out the reference API for more complete documentation.
 
 - [Demos](#demos)
+- [Supported Mapping Libraries](#supported-mapping-libraries)
 - [Overview of Features](#overview-of-features)
     - [Data and Weather API](#data-and-weather-api)
     - [Maps](#maps)
     - [Geoservices](#geoservices)
     - [AppBuilder](#appbuilder)
+- [Integrating with Existing Applications](#integrating-with-existing-applications)
 
 #### A Note For RequireJS Users
 The examples in this document reference components within the global `aeris` namespace. This is appropriate when loading the library from a CDN. If you are loading components as RequireJS/AMD modules, you can find find modules by matching namespace paths to the aeris library file structure.
@@ -323,3 +325,48 @@ compass compile
 ```
 
 from the theme directory.
+
+
+## Integrating with Existing Applications
+
+It is possible to use Aeris.js with existing map-based applications, without having to refactor all of your current code to use `aeris` objects. Simply pass in your map object to `aeris.maps.Map`:
+
+```javascript
+var myGoogleMap = new google.maps.Map(mapCanvas);
+
+// Do some really amazing stuff with your google map
+// ...
+
+
+// Creat an Aeris "wrapper" around your google map
+var myAerisMap = new aeris.maps.Map(myGoogleMap);
+
+// Add a rdar layer to your map
+var radar = new aeris.maps.layers.Radar();
+radar.setMap(myAerisMap);
+```
+
+This will work with any mapping library supported by Aeris.js. See [Supported Mapping Libraries](#supported-mapping-libraries) for a full list.
+
+
+You can also access the core map from your Aeris map using the `getView` method. This is useful if you want to integrate map-library-specific code with your Aeris.js code.
+
+```javascript
+var myAerisMap = new aeris.maps.Map('map-canvas');
+
+// Do some really amazing stuff with your Aeris.js map
+// ...
+
+// Grab your Leaflet map object
+// (assuming we're using the aeris-leaflet.js package)
+var leafletMap = myAerisMap.getView();
+
+// Create an awesome marker
+var prettyCoolIcon = L.AwesomeMarkers.icon({
+icon: 'globe',
+markerColor: 'blue'
+});
+new L.Marker([45, -90], {
+icon: prettyCoolIcon
+}).addTo(leafletMap);
+```
