Documentation: Clarification and fixes

--- a/docs/themes/markdown/views/install.md.handlebars
+++ b/docs/themes/markdown/views/install.md.handlebars
@@ -118,9 +118,21 @@ require.config({
         // See https://github.com/Leaflet/Leaflet.markercluster
         'leaflet-markercluster': 'mapApp/lib/vendor/leaflet.markercluster'
     },
+
+    // A Shim configuration is required for libraries which
+    // do not support AMD out of the box.
+    // See http://requirejs.org/docs/api.html#config-shim
     shim: {
-        // Shim configuration may be required.
-        // See http://requirejs.org/docs/api.html#config-shim
+        // Only required when using google maps
+        'gmaps-markerclusterer-plus': {
+          exports: 'MarkerClusterer'
+        },
+
+        // Only required when using Leaflet
+        'leaflet-markercluster': {
+          deps: ['leaflet'],
+          exports: 'L.MarkerClusterGroup'
+        }
     }
 });
 ```
@@ -130,27 +142,26 @@ See [the AMD/Bower.js example app](https://github.com/hamweather/aerisjs/tree/ma
 
 #### Specifying a Map Library
 
-The Aeris.js library allows all of its components to be rendered either by using [Google Maps API v3.x](https://developers.google.com/maps/), or [OpenLayers](http://openlayers.org/). To instruct Aeris.js on which library to use, you must specify a map rendering *strategy*.
+By default,tThe Aeris.js library uses [Leaflet](http://leafletjs.com/) as it core mapping library. You can change which mapping library is used by overriding the `aeris/maps/strategy` AMD path.
 
 ```javascript
 require.config({
     paths: {
-        // For Google Maps
+        // Use Leaflet (default)
+        'aeris/maps/strategy': 'myApp/vendor/aerisjs/src/maps/leaflet'
+
+        // Use Google Maps
         'aeris/maps/strategy': 'myApp/vendor/aerisjs/src/maps/gmaps'
 
-        // For OpenLayers
+        // Use OpenLayers
         'aeris/maps/strategy': 'myApp/vendor/aerisjs/src/maps/openlayers'
     }
 });
 ```
 
-All of the components of the public API are strategy-agnostic, meaning that they will interface which whatever strategy is provided to them. By setting the `strategy` path to `gmaps` or `openlayers`, Aeris.js components know to request the correct strategy implementation.
-
-Not all functionalities are currently implemented for all map rendering strategies. If there's something you're sorely missing, I encourage you to take a look at how [strategy architecture]({{getApiDocUrl 'aeris.maps.AbstractStrategy' }}) is implemented, and then submit a [pull request.](https://github.com/hamweather/aerisjs/pulls)
-
-Note that CDN pacakges are hard-coded to use a single strategy.
-
 The map libraries will be loaded for you as AMD modules -- there is no need to include them separately. See [Setting API Keys](#setting-api-keys) for instructions of map library configuration.
+
+Not all functionalities are currently implemented for all map rendering strategies. See [*Supported Mapping Libraries*](usage.md#supported-mapping-libraries) for a breakdown of supported features.
 
 
 
