Update install.md docs to reference the correct default map
- Fixes #22

--- a/docs/themes/markdown/views/install.md.handlebars
+++ b/docs/themes/markdown/views/install.md.handlebars
@@ -25,15 +25,29 @@ There are several hosted versions of the Aeris.js library, each with a varying s
 
 * **Aeris.js**
 
-    The default library includes all of the Aeris.js features, excluding the Map AppBuilder. Google Maps is used as the default mapping library.
+    The default library includes all of the Aeris.js features. Leaflet is used as the default mapping library.
 
     [{{getCDNPath 'aeris'}}]({{getCDNPath 'aeris'}})
+
+    For this package, you will also need to include the Leaflet library and stylesheet:
+
+    ```js
+<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css"/>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
+    ```
 
 * **Weather for Google Maps**
 
     Render weather tile layers and data using [Google Maps](https://developers.google.com/maps/).
 
     [{{getCDNPath 'gmaps'}}]({{getCDNPath 'gmaps'}})
+
+
+* **Weather for Leaflet**
+
+    Render weather tile layers and data using [Leaflet](http://leafletjs.com/).
+
+    [{{getCDNPath 'leaflet'}}]({{getCDNPath 'leaflet'}})
 
 * **Weather for OpenLayers**
 
@@ -54,6 +68,12 @@ There are several hosted versions of the Aeris.js library, each with a varying s
     Includes additional APIs for {{publicDocLink 'aeris.geolocate' 'geolocation'}}, {{publicDocLink 'aeris.geocode' 'geocoding'}}, and {{apiDocLink 'aeris.directions.DirectionsServiceInterface' 'directions'}}.
 
     [{{getCDNPath 'gmaps-plus'}}]({{getCDNPath 'gmaps-plus'}})
+
+* **Weather for Leaflet + Geo Services**
+
+    Includes additional APIs for {{publicDocLink 'aeris.geolocate' 'geolocation'}}, {{publicDocLink 'aeris.geocode' 'geocoding'}}, and {{apiDocLink 'aeris.directions.DirectionsServiceInterface' 'directions'}}.
+
+    [{{getCDNPath 'leaflet-plus'}}]({{getCDNPath 'leaflet-plus'}})
     
 
 
