Docs: fix Aeris.js cdn paths

--- a/docs/themes/markdown/views/install.md.handlebars
+++ b/docs/themes/markdown/views/install.md.handlebars
@@ -40,14 +40,14 @@ There are several hosted versions of the Aeris.js library, each with a varying s
 
     Render weather tile layers and data using [Google Maps](https://developers.google.com/maps/).
 
-    [{{getCDNPath 'gmaps'}}]({{getCDNPath 'gmaps'}})
+    [{{getCDNPath 'aeris-gmaps'}}]({{getCDNPath 'aeris-gmaps'}})
 
 
 * **Weather for Leaflet**
 
     Render weather tile layers and data using [Leaflet](http://leafletjs.com/).
 
-    [{{getCDNPath 'leaflet'}}]({{getCDNPath 'leaflet'}})
+    [{{getCDNPath 'aeris-leaflet'}}]({{getCDNPath 'aeris-leaflet'}})
 
 * **Weather for OpenLayers**
 
@@ -61,19 +61,19 @@ There are several hosted versions of the Aeris.js library, each with a varying s
 
     A javascript interface for the [Aeris Weather API]({{project.aerisApiUrl}}).
 
-    [{{getCDNPath 'api'}}]({{getCDNPath 'api'}})
+    [{{getCDNPath 'aeris-api'}}]({{getCDNPath 'aeris-api'}})
 
 * **Weather for Google Maps + Geo Services**
 
     Includes additional APIs for {{publicDocLink 'aeris.geolocate' 'geolocation'}}, {{publicDocLink 'aeris.geocode' 'geocoding'}}, and {{apiDocLink 'aeris.directions.DirectionsServiceInterface' 'directions'}}.
 
-    [{{getCDNPath 'gmaps-plus'}}]({{getCDNPath 'gmaps-plus'}})
+    [{{getCDNPath 'aeris-gmaps-plus'}}]({{getCDNPath 'aeris-gmaps-plus'}})
 
 * **Weather for Leaflet + Geo Services**
 
     Includes additional APIs for {{publicDocLink 'aeris.geolocate' 'geolocation'}}, {{publicDocLink 'aeris.geocode' 'geocoding'}}, and {{apiDocLink 'aeris.directions.DirectionsServiceInterface' 'directions'}}.
 
-    [{{getCDNPath 'leaflet-plus'}}]({{getCDNPath 'leaflet-plus'}})
+    [{{getCDNPath 'aeris-leaflet-plus'}}]({{getCDNPath 'aeris-leaflet-plus'}})
     
 
 
