--- a/docs/themes/markdown/views/usage.md.handlebars
+++ b/docs/themes/markdown/views/usage.md.handlebars
@@ -22,7 +22,7 @@ For example, {{publicDocLink 'aeris.maps.layers.Radar'}} can be found at [`aeris
 
 ## Demos
 
-In the interest of providing clear and concise demonstration code, not all of the examples in this document can run as-is. If you would like to see full working examples of Aeris.js code, visit our [Demos](http://demo.aerisjs.com/ page.
+In the interest of providing clear and concise demonstration code, not all of the examples in this document can run as-is. If you would like to see full working examples of Aeris.js code, visit our [Demos](http://demo.aerisjs.com/) page.
 
 
 ## Supported Mapping Libraries
